kubernetes/apps/default/cloud/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cloud
  namespace: default
subsets:
- addresses:
  - ip: ${SECRET_NEXTCLOUD_IP}
  ports:
  - name: http
    port: 8080
    protocol: TCP
