kubernetes/apps/default/cloud/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud
  namespace: default
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
